// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product type hints attribute enum values with previous with changes when is localized should match snapshot 1`] = `
[
  {
    "action": "changeEnumKey",
    "attributeName": "attribute-name",
    "key": "enum-key",
    "newKey": "next-key",
  },
  {
    "action": "changeLocalizedEnumValueLabel",
    "attributeName": "attribute-name",
    "newValue": {
      "key": "next-key",
      "label": "next-label",
    },
  },
]
`;

exports[`product type hints attribute enum values with previous with changes when is not localized should match snapshot 1`] = `
[
  {
    "action": "changeEnumKey",
    "attributeName": "attribute-name",
    "key": "enum-key",
    "newKey": "next-key",
  },
  {
    "action": "changePlainEnumValueLabel",
    "attributeName": "attribute-name",
    "newValue": {
      "key": "next-key",
      "label": "next-label",
    },
  },
]
`;

exports[`product type hints attribute enum values with previous with changes when removing, adding, and editing (in a single batch of actions) should match snapshot 1`] = `
[
  {
    "action": "removeEnumValues",
    "attributeName": "attribute-enum-with-2-enum-values-to-remove",
    "keys": [
      "enum-key-1",
      "enum-key-2",
    ],
  },
  {
    "action": "changeEnumKey",
    "attributeName": "attribute-name",
    "key": "enum-key",
    "newKey": "next-enum-draft-item",
  },
  {
    "action": "changePlainEnumValueLabel",
    "attributeName": "attribute-name",
    "newValue": {
      "key": "next-enum-draft-item",
      "label": undefined,
    },
  },
  {
    "action": "addPlainEnumValue",
    "attributeName": "attribute-name",
    "value": {
      "key": "new-enum-draft-item",
      "label": "new-enum-draft-item",
    },
  },
]
`;

exports[`product type hints attribute enum values without previous should match snapshot 1`] = `
[
  {
    "action": "addPlainEnumValue",
    "attributeName": "attribute-name",
    "value": {
      "key": "enum-key",
      "label": "enum-label",
    },
  },
]
`;

exports[`product type hints attribute enum values without previous when is localized should match snapshot 1`] = `
[
  {
    "action": "addLocalizedEnumValue",
    "attributeName": "attribute-name",
    "value": {
      "key": "enum-key",
      "label": "enum-label",
    },
  },
]
`;

exports[`product type hints attribute enum values without previous when is truly localized should match snapshot 1`] = `
[
  {
    "action": "changeLocalizedEnumValueLabel",
    "attributeName": "attribute-name",
    "newValue": {
      "key": "enum-key",
      "label": {
        "en-GB": "uk-label-new",
      },
    },
  },
]
`;

exports[`product type hints attribute hints with previous with next with changes should match snapshot 1`] = `
[
  {
    "action": "changeLabel",
    "attributeName": "attribute-name",
    "label": {
      "en": "next-attribute-label",
    },
  },
  {
    "action": "setInputTip",
    "attributeName": "attribute-name",
    "inputTip": {
      "en": "next-input-tip",
    },
  },
  {
    "action": "changeInputHint",
    "attributeName": "attribute-name",
    "newValue": "MultiLine",
  },
  {
    "action": "changeIsSearchable",
    "attributeName": "attribute-name",
    "isSearchable": true,
  },
  {
    "action": "changeAttributeConstraint",
    "attributeName": "attribute-name",
    "newValue": "None",
  },
]
`;

exports[`product type hints attribute hints with previous with next with no changes should match snapshot 1`] = `[]`;

exports[`product type hints attribute hints with previous without next should match snapshot 1`] = `
[
  {
    "action": "removeAttributeDefinition",
    "name": "attribute-name",
  },
]
`;

exports[`product type hints attribute hints without previous should match snapshot 1`] = `
[
  {
    "action": "addAttributeDefinition",
    "attribute": {
      "attributeConstraint": "SameForAll",
      "inputHint": "SingleLine",
      "inputTip": {
        "en": "input-hint",
      },
      "isRequired": false,
      "isSearchable": false,
      "label": {
        "en": "attribute-label",
      },
      "name": "attribute-name",
      "type": {
        "name": "text",
      },
    },
  },
]
`;
